# CrowdSurfer

./: .gitignore  CMakeLists.txt  README.md  package.xml  run_CrowdSurfer.sh  tf_transform_simulated_agents.py
src/CrowdSurfer/: README.md  main.py  process_bags.py  pyproject.toml  ros_interface.py  ros_interface_3d_lidar.py  ros_interface_subgoals_old.py  ros_interface_with_global_plan.py  run_CrowdSurfer.sh  scan_obstacles.py  tf_transform.py
src/CrowdSurfer/configuration/: __init__.py  base.yaml  configuration.py  configuration.yaml  configuration_3dlidar.yaml  initialize.py
src/CrowdSurfer/configuration/dataset/: pixelcnn.yaml  vqvae.yaml
src/CrowdSurfer/configuration/live/: simulation.yaml  wheelchair_livox.yaml
src/CrowdSurfer/configuration/projection/: 3dlidar.yaml
src/CrowdSurfer/configuration/trainer/: pixelcnn.yaml  vqvae.yaml
src/CrowdSurfer/inference/: dataset.py  inference.py  live.py  pipeline.py  plotting.py
src/CrowdSurfer/misc/: convert_npz_format_to_dir_format.py  plot_trajectories.py  ros_interface_subgoals_old.py  segregate_processed_bags.py
src/CrowdSurfer/navigation/dataset/: __init__.py  dataset.py
src/CrowdSurfer/navigation/model/: __init__.py  observation_embedding.py  pixelcnn.py  scoring_network.py
src/CrowdSurfer/navigation/priest_guidance/: __init__.py  bernstein_generator.py  (+4 more)
src/CrowdSurfer/processing/: constants.py  message_reading_functions.py  per_timestep_processing_functions.py  processing.py  processing_functions.py
src/CrowdSurfer/training/: __init__.py  pixelcnn.py  scoring_network.py  trainer.py  vqvae.py
(+40 files in other folders)
